--- a/client/src/App.css
+++ b/client/src/App.css
@@ -52,6 +52,8 @@ html, body, #root {
   justify-content: center;
   align-items: center;
   overflow: auto;
+  width: 100%;
+  height: 100%;
 }
 
 table {
