--- a/client/src/App.css
+++ b/client/src/App.css
@@ -70,3 +70,11 @@ table th {
   background-color: #f2f2f2;
   text-align: left;
 }
+
+.tooltip {
+  fill: white;
+  font-family: sans-serif;
+  padding: 5px;
+  border-radius: 5px;
+  border: 1px solid grey;
+}
