--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,9 +1,4 @@
-html, body, #root {
-  height: 100%;
-  margin: 0;
-  padding: 0;
-}
-
+/* App.css */
 .App {
   display: flex;
   flex-direction: column;
@@ -13,11 +8,11 @@ html, body, #root {
 .App-header {
   flex: 0 1 auto;
   background-color: #282c34;
-  padding: 20px;
+  padding: 10px 20px;
   color: white;
   display: flex;
-  justify-content: space-between;
   align-items: center;
+  justify-content: space-between;
 }
 
 .App-content {
@@ -28,15 +23,13 @@ html, body, #root {
 
 .tabs {
   display: flex;
-  justify-content: center;
-  margin-bottom: 20px;
 }
 
 .tabs button {
   background-color: #61dafb;
   border: none;
   padding: 10px 20px;
-  margin: 0 5px;
+  margin-left: 5px;
   cursor: pointer;
   font-size: 16px;
   color: #282c34;
