--- a/client/src/App.css
+++ b/client/src/App.css
@@ -94,3 +94,20 @@ table th {
   border-radius: 5px;
   border: 1px solid grey;
 }
+
+.Home {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  text-align: center;
+}
+
+.Home .MuiTypography-h3 {
+  margin-bottom: 20px;
+}
+
+.Home .MuiButton-containedPrimary {
+  margin-top: 20px;
+}
