--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,4 +1,3 @@
-/* App.css */
 .App {
   display: flex;
   flex-direction: column;
@@ -7,10 +6,23 @@
   color: #FFFFFF;
 }
 
+#d3-container {
+  width: 100%;
+  height: 100%;
+  position: relative;
+}
+
 .viz {
   width: 100%;
   height: 100%;
   background-color: #191414;
+  position: relative;
+}
+
+#svg_class {
+  width: 100%;
+  height: 100%;
+  display: block;
 }
 
 .tooltip {
